[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/actors/enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/enemy/States/EnemyStateMachine.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/actors/enemy/States/Chase.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/actors/enemy/States/Idle.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/actors/enemy/States/Telegraph.tscn" type="PackedScene" id=5]
[ext_resource path="res://library/common/DetectBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://library/common/HurtBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://library/common/HitBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://icon.png" type="Texture" id=9]
[ext_resource path="res://scenes/actors/player/states/Attack.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/actors/player/states/Hurt.tscn" type="PackedScene" id=11]

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 19.0263

[sub_resource type="CircleShape2D" id=2]
radius = 10.0499

[sub_resource type="CircleShape2D" id=1]
radius = 8.94427

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="NavAgent" type="NavigationAgent2D" parent="."]
max_speed = 60.0

[node name="NavTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="HitBox" parent="." instance=ExtResource( 8 )]

[node name="Area" parent="HitBox" index="0"]
collision_layer = 0
collision_mask = 2

[node name="Shape" parent="HitBox/Area" index="0"]
shape = SubResource( 3 )

[node name="DetectBox" parent="." instance=ExtResource( 6 )]

[node name="Area" parent="DetectBox" index="0"]
collision_layer = 0

[node name="Shape" parent="DetectBox/Area" index="0"]
shape = SubResource( 4 )

[node name="HurtBox" parent="." instance=ExtResource( 7 )]
max_hp = 3

[node name="Area" parent="HurtBox" index="0"]
collision_layer = 4
collision_mask = 0

[node name="Shape" parent="HurtBox/Area" index="0"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AttentionTimer" type="Timer" parent="."]
one_shot = true

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 150, 0 )
collision_mask = 2

[node name="StateMachine" parent="." instance=ExtResource( 2 )]

[node name="Idle" parent="StateMachine" instance=ExtResource( 4 )]

[node name="Telegraph" parent="StateMachine" instance=ExtResource( 5 )]

[node name="Chase" parent="StateMachine" instance=ExtResource( 3 )]

[node name="Attack" parent="StateMachine" instance=ExtResource( 10 )]

[node name="Hurt" parent="StateMachine" instance=ExtResource( 11 )]

[connection signal="timeout" from="NavTimer" to="." method="_on_NavTimer_timeout"]
[connection signal="no_targets_remain" from="DetectBox" to="." method="_on_DetectBox_no_targets_remain"]
[connection signal="target_detected" from="DetectBox" to="." method="_on_DetectBox_target_detected"]
[connection signal="is_dead" from="HurtBox" to="." method="_on_HurtBox_is_dead"]
[connection signal="took_damage" from="HurtBox" to="." method="_on_HurtBox_took_damage"]
[connection signal="timeout" from="AttentionTimer" to="." method="_on_AttentionTimer_timeout"]

[editable path="HitBox"]
[editable path="DetectBox"]
[editable path="HurtBox"]
